# databento-python

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  historical.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: release.yml  test.yml
databento/: __init__.py
databento/common/: __init__.py  bento.py  bentologging.py  buffer.py  constants.py  cram.py  data.py  dbnstore.py  deprecated.py  enums.py  error.py  http.py  iterator.py  load.py  logging.py  metadata.py  parsing.py  publishers.py  symbology.py  system.py  types.py  utility.py  validation.py
databento/historical/: bento.py  client.py  error.py  http.py  load.py  stream.py
databento/historical/api/: __init__.py  batch.py  metadata.py  symbology.py  timeseries.py
databento/live/: __init__.py  client.py  data.py  dbn.py  gateway.py  protocol.py  session.py
databento/reference/: client.py
databento/reference/api/: adjustment.py  corporate.py  security.py
examples/: historical_batch.py  historical_batch_download.py  historical_batch_download_async.py  historical_batch_list_files.py  historical_batch_list_jobs.py  historical_batch_submit_job.py  historical_metadata.py  historical_metadata_cost.py  historical_metadata_get_billable_size.py  historical_metadata_get_cost.py  historical_metadata_get_dataset_condition.py  historical_metadata_get_dataset_range.py  historical_metadata_get_record_count.py  historical_metadata_get_shape.py  historical_metadata_list_dataset_conditions.py  historical_metadata_list_unit_price.py  historical_metadata_size.py  historical_symbology_resolve.py  historical_timeseries_async.py  historical_timeseries_disk_io.py  historical_timeseries_from_disk.py  historical_timeseries_from_file.py  historical_timeseries_replay.py  historical_timeseries_to_df.py  historical_timeseries_to_disk.py  historical_timeseries_to_file.py  historical_timeseries_to_list_glbx.py  historical_timeseries_to_list_xnas.py  historical_timeseries_to_ndarray.py  live_smoke_test.py  reference_adjustment_factors.py  reference_corporate_actions.py  reference_security_master_get_last.py  reference_security_master_get_range.py
notebooks/: quick-start.ipynb  quickstart.ipynb  symbology.ipynb
scripts/: build.sh  lint.sh  test.sh
tests/: __init__.py  conftest.py  fixtures.py  mock_live_server.py  test_bento_compression.py  test_bento_data_source.py  test_common_buffer.py  test_common_cram.py  test_common_enums.py  test_common_iterator.py  test_common_parsing.py  test_common_symbology.py  test_common_validation.py  test_historical_batch.py  test_historical_bento.py  test_historical_client.py  test_historical_data.py  test_historical_error.py  test_historical_metadata.py  test_historical_timeseries.py  test_historical_warnings.py  test_live_client.py  test_live_client_reconnect.py  test_live_compression.py  test_live_gateway_messages.py  test_live_protocol.py  test_live_session.py  test_reference_adjustment.py  test_reference_corporate.py  test_reference_security.py  test_release.py
tests/data/: generator.py  test_data.definition.dbn.zst  test_data.imbalance.dbn.zst  test_data.mbo.csv  test_data.mbo.csv.zst  test_data.mbo.dbn.zst  test_data.mbo.dbz  test_data.mbo.json.raw  test_data.mbo.json.zst  test_data.mbp-1.bin.zst  test_data.mbp-1.csv  test_data.mbp-1.csv.zst  test_data.mbp-1.dbn.zst  test_data.mbp-1.dbz  test_data.mbp-1.json.raw  test_data.mbp-1.json.zst  test_data.mbp-10.csv  test_data.mbp-10.csv.zst  test_data.mbp-10.dbn.zst  test_data.mbp-10.dbz  test_data.mbp-10.json.raw  test_data.mbp-10.json.zst  test_data.mbp-5.bin.zst  test_data.mbp-5.csv  test_data.mbp-5.csv.zst  test_data.mbp-5.json.raw  test_data.mbp-5.json.zst  test_data.ohlcv-1d.csv.zst  test_data.ohlcv-1d.dbn.zst  test_data.ohlcv-1d.dbz  test_data.ohlcv-1h.bin.zst  test_data.ohlcv-1h.csv  test_data.ohlcv-1h.csv.zst  test_data.ohlcv-1h.dbn.zst  test_data.ohlcv-1h.dbz  test_data.ohlcv-1h.json.raw  test_data.ohlcv-1h.json.zst  test_data.ohlcv-1m.bin.zst  test_data.ohlcv-1m.csv  test_data.ohlcv-1m.csv.zst  (+25 more)
tests/data/DBEQ.BASIC/: test_data.definition.dbn.zst  test_data.mbp-1.dbn.zst  test_data.mbp-10.dbn.zst  test_data.ohlcv-1d.dbn.zst  test_data.ohlcv-1h.dbn.zst  test_data.ohlcv-1m.dbn.zst  test_data.ohlcv-1s.dbn.zst  test_data.tbbo.dbn.zst  test_data.trades.dbn.zst
tests/data/EQUS.MINI/: test_data.bbo-1m.dbn.zst  test_data.bbo-1s.dbn.zst  test_data.definition.dbn.zst  test_data.mbp-1.dbn.zst  (+6 more)
tests/mockliveserver/: __main__.py  controller.py  fixture.py  server.py  source.py
(+66 files in other folders)
