[project]
name = "databento"
version = "0.66.0"
description = "Official Python client library for Databento"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Databento", email = "support@databento.com" }]
dynamic = [ "classifiers" ]
dependencies = [
    "aiohttp>=3.8.3,<4.0.0; python_version < '3.12'",
    "aiohttp>=3.9.0,<4.0.0; python_version >= '3.12'",
    "databento-dbn~=0.44.0",
    "numpy>=1.23.5; python_version < '3.12'",
    "numpy>=1.26.0; python_version >= '3.12'",
    "pandas>=1.5.3",
    "pip-system-certs>=4.0; platform_system == 'Windows'",
    "pyarrow>=13.0.0",
    "requests>=2.27.0",
    "zstandard>=0.21.0",
]

[project.urls]
Homepage = "https://databento.com"
Documentation = "https://databento.com/docs"
Repository = "https://github.com/databento/databento-python"
"Bug Tracker" = "https://github.com/databento/databento-python/issues"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "databento" },
    { include = "databento/py.typed" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "1.5.1"
pytest = "^7.4.2"
pytest-asyncio = "==0.21.1"
ruff = "^0.0.291"
types-requests = "^2.30.0.0"
tomli = "^2.0.1"
teamcity-messages = "^1.32"
types-pytz = "^2024.1.0.20240203"
types-aiofiles = "^23.2.0.20240403"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
ignore_missing_imports = true
namespace_packages = true
no_strict_optional = true
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
