[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
version = attr: databento.version.__version__

[flake8]
max-line-length = 88
ignore = C101, E203, W503

# Ignores justification
# ---------------------
# C101: Coding magic comment not found (not required as utf-8 is the default for python3).
# E203: whitespace before ':' (conflicts with Black)
# W503: in error will be amended by flake8 soon (https://www.flake8rules.com/rules/W503.html)
